# vs-wheels

./: .gitignore  .gitmodules  CHANGELOG.md  DEVELOPMENT.md  README.md  changelog.json  justfile  package-lock.json  package.json  pyproject.toml  vs-wheels.code-workspace
.github/: renovate.json
.github/actions/setup-cuda-linux/: action.yml
.github/actions/setup-cuda-windows/: action.yml
.github/actions/setup-cuda-windows-cu12/: action.yml
.github/actions/setup-cudnn-linux/: action.yml
.github/actions/setup-cudnn-windows/: action.yml
.github/actions/setup-hip-windows/: action.yml
.github/actions/setup-msvc/: action.yml
.github/actions/setup-ncnn-linux/: action.yml
.github/actions/setup-ncnn-macos/: action.yml
.github/actions/setup-ncnn-windows/: action.yml
.github/actions/setup-onnx-linux/: action.yml
.github/actions/setup-onnx-macos/: action.yml
.github/actions/setup-onnx-windows/: action.yml
.github/actions/setup-onnxruntime-linux/: action.yml
.github/actions/setup-onnxruntime-macos/: action.yml
.github/actions/setup-onnxruntime-windows/: action.yml
.github/actions/setup-openvino-linux/: action.yml
.github/actions/setup-openvino-macos/: action.yml
.github/actions/setup-openvino-windows/: action.yml
.github/actions/setup-tensorrt-linux-aarch64/: action.yml
.github/actions/setup-tensorrt-linux-x86-64/: action.yml
.github/actions/setup-tensorrt-rtx-linux/: action.yml
.github/actions/setup-tensorrt-rtx-windows/: action.yml
.github/actions/setup-tensorrt-windows/: action.yml
.github/actions/setup-tensorrt-windows-pypi/: action.yml
.github/cmake-cache/: ncnn-base.cmake  ncnn-linux.cmake  ncnn-macos.cmake  ncnn-windows.cmake  onnx-base.cmake  onnx-unix.cmake  onnx-windows.cmake  onnxruntime-aarch64.cmake  onnxruntime-base.cmake  onnxruntime-cuda.cmake  onnxruntime-linux.cmake  onnxruntime-macos-arm64.cmake  onnxruntime-macos-x86_64.cmake  onnxruntime-macos.cmake  onnxruntime-windows.cmake  onnxruntime-x64.cmake  openvino-aarch64.cmake  openvino-base.cmake  openvino-linux.cmake  openvino-macos-arm64.cmake  openvino-macos-x86_64.cmake  openvino-macos.cmake  openvino-windows.cmake  openvino-x64.cmake
.github/workflows/: bm3dcpu.yml  bm3dcuda.yml  bm3dhip.yml  cd-cuda12-release.yml  cd-publish.yml  cd-update-index.yml  cd-upload-bucket.yml  cd-upload-release.yml  ci-lock-integrity.yml  ci-status-gate.yml  ci-update-changelog.yml  dfttest2.yml  dfttest2_cpu.yml  dfttest2_cuda.yml  dfttest2_gcc.yml  dfttest2_hip.yml  dfttest2_hiprtc.yml  dfttest2_nvrtc.yml  fmtc.yml  lock-integrity.yml  ncnn.yml  pkg-ares.yml  pkg-atools.yml  pkg-bm3dcpu.yml  pkg-bm3dcuda-cu12.yml  pkg-bm3dcuda.yml  pkg-bm3dhip.yml  pkg-dfttest2.yml  pkg-dfttest2_cpu.yml  pkg-dfttest2_cuda-cu12.yml  pkg-dfttest2_cuda.yml  pkg-dfttest2_gcc.yml  pkg-dfttest2_hip.yml  pkg-dfttest2_hiprtc.yml  pkg-dfttest2_nvrtc-cu12.yml  pkg-dfttest2_nvrtc.yml  pkg-fmtc.yml  pkg-migx.yml  pkg-ncnn.yml  pkg-ort-cuda.yml  (+8 more)
ares/: CMakeLists.txt  README.md  pyproject.toml
atools/: CMakeLists.txt  README.md  pyproject.toml
bm3dcuda/bm3dcpu/: CMakeLists.txt
bm3dcuda/bm3dcuda/: CMakeLists.txt
bm3dcuda/bm3dhip/: CMakeLists.txt  pyproject.toml
dfttest2/dfttest2_cpu/: CMakeLists.txt
dfttest2/dfttest2_cuda/: ApplyPatch.cmake  CMakeLists.txt  README.md  pyproject.toml
dfttest2/dfttest2_cuda/patches/: nvidia-wheel-paths.patch
dfttest2/dfttest2_gcc/: CMakeLists.txt
dfttest2/dfttest2_hip/: CMakeLists.txt
dfttest2/dfttest2_hiprtc/: CMakeLists.txt
dfttest2/dfttest2_nvrtc/: CMakeLists.txt
fmtc/: pyproject.toml
scripts/: Add-Submodule.ps1  Download-Metadata.ps1  Enter-DevShell.ps1  Remove-Submodule.ps1  generate_changelog.py  generate_index.py  generate_metadata.py  upload_bucket.py  wait-checks.js
scripts/builds/: Build-ATools.ps1  Build-Ares.ps1  Build-BM3DCPU.ps1  Build-DFTTest2-CPU.ps1  Build-DFTTest2-GCC.ps1  Build-FMTC.ps1
vsmlrt/: README.md
vsmlrt/migx/: CMakeLists.txt  README.md  pyproject.toml
vsmlrt/ncnn/: ApplyPatch.cmake  CMakeLists.txt  README.md  pyproject.toml
vsmlrt/ncnn/patches/: missing-kernel-shape.patch  segfault-asymmetrical-formats.patch
vsmlrt/ort/: CMakeLists.txt  README.md  pyproject.toml
vsmlrt/ort/patches/: more-cudnn-libs.patch  nvidia-wheel-paths.patch
vsmlrt/ort/scripts/: cuda_pyproject.py
vsmlrt/ov/: CMakeLists.txt  README.md  patch_macos_install.cmake.in  pyproject.toml
vsmlrt/trt/: ApplyPatch.cmake  CMakeLists.txt  README.md  pyproject.toml
vsmlrt/trt/patches/: nvidia-wheel-paths.patch
vsmlrt/trt_rtx/: CMakeLists.txt  README.md  pyproject.toml
vsmlrt/trt_rtx/patches/: nvidia-wheel-paths.patch
vsmlrt/vsmlrt_cuda/: pyproject.toml
wheel-stub/: pyproject.toml
