[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vs-wheels"
requires-python = ">=3.12"
dependencies = ["vapoursynth>=75"]
dynamic = ["version"]

[project.urls]
"Repository" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-wheels"

[dependency-groups]
dev = [
    "dumb-pypi>=1.15.0",
    "gersemi>=0.27.2",
    "mypy>=1.20.2",
    "niquests>=3.18.7",
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "tomli-w>=1.2.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
scm.git.describe_command = [
    "python",
    "-c",
    "import subprocess as sp; count=sp.check_output(['git','rev-list','--count','HEAD'], text=True).strip(); sha=sp.check_output(['git','rev-parse','--short','HEAD'], text=True).strip(); print(f'{count}+{sha}')",
]
tag_regex = '^(?P<version>\d+\+[0-9a-f]+)$'
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.workspace]
members = [
    "bm3dcuda/bm3dcpu",
    "bm3dcuda/bm3dcuda",
    "bm3dcuda/bm3dhip",
    "fmtc",
    "dfttest2/dfttest2",
    "dfttest2/dfttest2_gcc",
    "dfttest2/dfttest2_cpu",
    "dfttest2/dfttest2_cuda",
    "dfttest2/dfttest2_nvrtc",
    "dfttest2/dfttest2_hip",
    "dfttest2/dfttest2_hiprtc",
    "vsmlrt/ncnn",
    "vsmlrt/ort",
    "vsmlrt/ov",
    "vsmlrt/trt",
    "vsmlrt/trt_rtx",
    "vsmlrt/migx",
]

[tool.mypy]
exclude_gitignore = true

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true
fixed_format_cache = true

[tool.ruff]
line-length = 120
extend-exclude = ["vapoursynth", "vs-dfttest2", "vs-mlrt"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "UP",
    "FURB",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
